game service test pass